--- a/PSMSFixer/Resources/Data.en-US.resx
+++ b/PSMSFixer/Resources/Data.en-US.resx
@@ -117,4 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="PSmove_Drift_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>PSmove Drift 0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PSmove_Drift_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>PSmove Drift 1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PSmove_Drift_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>PSmove Drift 2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PSmove_Drift_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>PSmove Drift 3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="test_camera_bin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>test_camera_bin;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
